--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -1,5 +1,8 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: aquamarine;
+    width: 100%;
+    height: 100vh;
 }
 
 nav ul {
@@ -14,7 +17,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: blue;
+    color: green;
 }
 
 nav ul li a:hover {
