--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -18,7 +18,7 @@
 </nav>
 <h1>Build Page</h1>
 <form id="build-form">
-    <h2>Application-level parameters</h2>
+    <h2>Application-level parameters test</h2>
 
     <label for="git_url">Git URL:</label>
     <input type="text" id="git_url" name="git_url" value="ssh://git@stash.delta.sbrf.ru:7999/CRTM/hello-world-java-gradle.git" hx-post="/update_build?field=git_url" hx-trigger="change" hx-target="#build-result"><br>
